<resources>
    <string name="app_name">ContractorCalculator</string>
    <string name="labor">Labor:</string>
    <string name="materials">Materials:</string>
    <string name="_0_00">0.00</string>
    <string name="calculate">Calculate</string>
    <string name="subtotal">SubTotal:</string>
    <string name="label">Label</string>
    <string name="tax">Tax:</string>
    <string name="total">Total</string>
    <string name="subTotalAmt_String">$%1$.2f</string>
</resources>