<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:fitsSystemWindows="true"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLaborCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labor"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="300dp"
        android:textColor="@color/black"
        android:gravity="right"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editTextLaborCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="12"
        android:hint="@string/_0_00"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewLaborCost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMaterialCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materials"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="300dp"
        android:textColor="@color/black"
        android:gravity="right"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLaborCost"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editTextMaterialCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:ems="12"
        android:hint="@string/_0_00"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewMaterialCost"
        app:layout_constraintTop_toBottomOf="@id/textViewLaborCost" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:text="@string/calculate"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMaterialCost"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textColor="@color/black"
        android:gravity="right"
        android:textSize="16sp"
        android:layout_marginEnd="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewSubTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewSubTotal"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textColor="@color/black"
        android:gravity="right"
        android:textSize="16sp"
        android:layout_marginEnd="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTotal"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewTaxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTax"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTotal"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/black"
        android:gravity="right"
        android:textSize="16sp"
        android:layout_marginEnd="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTax"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewTax"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>